
# pyproject.toml
[project]
name = "WWAA-CustomNodes" # Unique identifier for your node. Immutable after creation.
description = "Custom Nodes for ComfyUI made by the team at WeirdWonderfulAI.Art These are developed based on the needs where there was a gap to make our workflows better. You are welcome to use it as you see fit."
version = "1.0.0" # Custom Node version. Must be semantically versioned.
license = "LICENSE.txt"
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/hgabha/WWAA-CustomNodes"

[tool.comfy]
PublisherId = "wwaa" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "WWAA CustomNodes" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)
